//! Enhanced DApp Browser Service
//! 
//! Provides comprehensive DApp browser integration with:
//! - Multi-chain support (Ethereum, Polygon, BSC, Solana, Arbitrum, Optimism)
//! - Session management and security
//! - DApp whitelist and security validation
//! - Real-time communication with mobile clients
//! - Transaction simulation and gas optimization

use std::sync::Arc;
use std::collections::HashMap;
use tonic::{Request, Response, Status};
use tracing::{info, warn, error, instrument};
use chrono::{DateTime, Utc, Duration};
use serde::{Deserialize, Serialize};
use uuid::Uuid;

use crate::proto::fo3::wallet::v1::*;
use crate::middleware::{
    auth::{AuthService, AuthGuard},
    audit::AuditLogger,
    rate_limit::RateLimiter,
};
use crate::error::ServiceError;

/// Enhanced DApp Browser Service implementation
pub struct DAppBrowserServiceImpl {
    auth_service: Arc<AuthService>,
    audit_logger: Arc<AuditLogger>,
    rate_limiter: Arc<RateLimiter>,
    session_manager: Arc<DAppSessionManager>,
    whitelist_manager: Arc<DAppWhitelistManager>,
    security_validator: Arc<DAppSecurityValidator>,
    multi_chain_manager: Arc<MultiChainManager>,
}

/// DApp session manager
pub struct DAppSessionManager {
    active_sessions: tokio::sync::RwLock<HashMap<String, DAppSession>>,
    config: DAppSessionConfig,
}

/// DApp whitelist manager
pub struct DAppWhitelistManager {
    whitelisted_dapps: tokio::sync::RwLock<HashMap<String, WhitelistedDApp>>,
    security_rules: Vec<SecurityRule>,
}

/// DApp security validator
pub struct DAppSecurityValidator {
    malware_detector: Arc<MalwareDetector>,
    phishing_detector: Arc<PhishingDetector>,
    contract_analyzer: Arc<ContractAnalyzer>,
}

/// Multi-chain manager
pub struct MultiChainManager {
    supported_chains: HashMap<String, ChainConfig>,
    rpc_providers: HashMap<String, RpcProvider>,
    gas_estimators: HashMap<String, GasEstimator>,
}

/// DApp session configuration
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct DAppSessionConfig {
    pub max_sessions_per_user: u32,
    pub session_timeout_minutes: u32,
    pub max_concurrent_transactions: u32,
    pub auto_disconnect_inactive_minutes: u32,
    pub require_user_confirmation: bool,
    pub enable_transaction_simulation: bool,
}

/// DApp session
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct DAppSession {
    pub session_id: String,
    pub user_id: String,
    pub dapp_url: String,
    pub dapp_name: String,
    pub chain_id: String,
    pub connected_accounts: Vec<String>,
    pub permissions: Vec<DAppPermission>,
    pub created_at: DateTime<Utc>,
    pub last_activity: DateTime<Utc>,
    pub status: SessionStatus,
    pub transaction_count: u32,
    pub gas_used: u64,
}

/// DApp permission
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum DAppPermission {
    ReadAccounts,
    SignTransactions,
    SignMessages,
    AccessBalance,
    AccessTokens,
    AccessNFTs,
    AccessHistory,
}

/// Session status
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum SessionStatus {
    Active,
    Inactive,
    Suspended,
    Expired,
    Terminated,
}

/// Whitelisted DApp
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct WhitelistedDApp {
    pub dapp_id: String,
    pub name: String,
    pub url: String,
    pub description: String,
    pub category: DAppCategory,
    pub security_score: f64,
    pub supported_chains: Vec<String>,
    pub verified: bool,
    pub audit_date: Option<DateTime<Utc>>,
    pub risk_level: RiskLevel,
    pub default_permissions: Vec<DAppPermission>,
}

/// DApp category
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum DAppCategory {
    DeFi,
    Gaming,
    NFT,
    Social,
    Utility,
    Exchange,
    Lending,
    Staking,
    Bridge,
    Other,
}

/// Risk level
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum RiskLevel {
    Low,
    Medium,
    High,
    Critical,
}

/// Security rule
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct SecurityRule {
    pub rule_id: String,
    pub rule_type: SecurityRuleType,
    pub pattern: String,
    pub action: SecurityAction,
    pub severity: RiskLevel,
}

/// Security rule type
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum SecurityRuleType {
    URLPattern,
    ContractAddress,
    FunctionSignature,
    TransactionValue,
    GasLimit,
    Frequency,
}

/// Security action
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum SecurityAction {
    Allow,
    Block,
    Warn,
    RequireConfirmation,
    Quarantine,
}

/// Chain configuration
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ChainConfig {
    pub chain_id: String,
    pub name: String,
    pub network_type: NetworkType,
    pub rpc_urls: Vec<String>,
    pub explorer_url: String,
    pub native_currency: CurrencyInfo,
    pub gas_price_oracle: Option<String>,
    pub supports_eip1559: bool,
}

/// Network type
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum NetworkType {
    Mainnet,
    Testnet,
    Layer2,
    Sidechain,
}

/// Currency information
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct CurrencyInfo {
    pub symbol: String,
    pub name: String,
    pub decimals: u8,
}

/// RPC provider
pub struct RpcProvider {
    pub provider_id: String,
    pub endpoint: String,
    pub api_key: Option<String>,
    pub rate_limit: u32,
    pub timeout_ms: u64,
}

/// Gas estimator
pub struct GasEstimator {
    pub chain_id: String,
    pub base_fee_multiplier: f64,
    pub priority_fee_multiplier: f64,
    pub max_fee_multiplier: f64,
}

/// Malware detector
pub struct MalwareDetector {
    pub signatures: Vec<MalwareSignature>,
    pub heuristics: Vec<HeuristicRule>,
}

/// Phishing detector
pub struct PhishingDetector {
    pub known_phishing_domains: Vec<String>,
    pub similarity_threshold: f64,
    pub legitimate_domains: Vec<String>,
}

/// Contract analyzer
pub struct ContractAnalyzer {
    pub known_malicious_contracts: Vec<String>,
    pub analysis_rules: Vec<ContractAnalysisRule>,
}

/// Malware signature
#[derive(Debug, Clone)]
pub struct MalwareSignature {
    pub signature_id: String,
    pub pattern: String,
    pub severity: RiskLevel,
}

/// Heuristic rule
#[derive(Debug, Clone)]
pub struct HeuristicRule {
    pub rule_id: String,
    pub description: String,
    pub weight: f64,
}

/// Contract analysis rule
#[derive(Debug, Clone)]
pub struct ContractAnalysisRule {
    pub rule_id: String,
    pub function_signature: String,
    pub risk_score: f64,
    pub description: String,
}

impl DAppBrowserServiceImpl {
    /// Create new DApp browser service
    pub fn new(
        auth_service: Arc<AuthService>,
        audit_logger: Arc<AuditLogger>,
        rate_limiter: Arc<RateLimiter>,
    ) -> Self {
        let session_manager = Arc::new(DAppSessionManager::new());
        let whitelist_manager = Arc::new(DAppWhitelistManager::new());
        let security_validator = Arc::new(DAppSecurityValidator::new());
        let multi_chain_manager = Arc::new(MultiChainManager::new());

        Self {
            auth_service,
            audit_logger,
            rate_limiter,
            session_manager,
            whitelist_manager,
            security_validator,
            multi_chain_manager,
        }
    }

    /// Connect to DApp
    #[instrument(skip(self, request))]
    pub async fn connect_dapp(&self, request: Request<ConnectDAppRequest>) -> Result<Response<ConnectDAppResponse>, Status> {
        let auth_guard = AuthGuard::new(self.auth_service.clone());
        let auth_context = auth_guard.check_auth(&request).await?;

        let req = request.into_inner();
        
        // Rate limiting
        self.rate_limiter.check_rate_limit(
            &format!("dapp_connect_{}", auth_context.user_id),
            "10/minute"
        ).await.map_err(|e| Status::resource_exhausted(e.to_string()))?;

        // Validate DApp URL
        let validation_result = self.security_validator.validate_dapp_url(&req.dapp_url).await
            .map_err(|e| Status::invalid_argument(format!("DApp validation failed: {}", e)))?;

        if !validation_result.is_safe {
            return Err(Status::permission_denied(format!("DApp blocked: {}", validation_result.reason)));
        }

        // Check whitelist
        let whitelist_status = self.whitelist_manager.check_whitelist(&req.dapp_url).await;

        // Create session
        let session = DAppSession {
            session_id: Uuid::new_v4().to_string(),
            user_id: auth_context.user_id.clone(),
            dapp_url: req.dapp_url.clone(),
            dapp_name: req.dapp_name.unwrap_or_else(|| "Unknown DApp".to_string()),
            chain_id: req.chain_id,
            connected_accounts: req.accounts,
            permissions: req.requested_permissions.into_iter()
                .filter_map(|p| self.parse_permission(&p))
                .collect(),
            created_at: Utc::now(),
            last_activity: Utc::now(),
            status: SessionStatus::Active,
            transaction_count: 0,
            gas_used: 0,
        };

        // Store session
        self.session_manager.create_session(session.clone()).await
            .map_err(|e| Status::internal(format!("Failed to create session: {}", e)))?;

        // Audit log
        self.audit_logger.log_dapp_connection(
            &auth_context.user_id,
            &req.dapp_url,
            &session.session_id,
            request.remote_addr(),
        ).await;

        let response = ConnectDAppResponse {
            session_id: session.session_id,
            approved_permissions: session.permissions.iter()
                .map(|p| format!("{:?}", p))
                .collect(),
            chain_info: self.multi_chain_manager.get_chain_info(&session.chain_id).await,
            security_warnings: validation_result.warnings,
            whitelist_status: whitelist_status.status,
        };

        Ok(Response::new(response))
    }

    /// Disconnect from DApp
    #[instrument(skip(self, request))]
    pub async fn disconnect_dapp(&self, request: Request<DisconnectDAppRequest>) -> Result<Response<DisconnectDAppResponse>, Status> {
        let auth_guard = AuthGuard::new(self.auth_service.clone());
        let auth_context = auth_guard.check_auth(&request).await?;

        let req = request.into_inner();

        // Validate session ownership
        let session = self.session_manager.get_session(&req.session_id).await
            .map_err(|e| Status::not_found(format!("Session not found: {}", e)))?;

        if session.user_id != auth_context.user_id {
            return Err(Status::permission_denied("Session does not belong to user"));
        }

        // Terminate session
        self.session_manager.terminate_session(&req.session_id).await
            .map_err(|e| Status::internal(format!("Failed to terminate session: {}", e)))?;

        // Audit log
        self.audit_logger.log_dapp_disconnection(
            &auth_context.user_id,
            &session.dapp_url,
            &req.session_id,
            request.remote_addr(),
        ).await;

        let response = DisconnectDAppResponse {
            success: true,
            message: "Successfully disconnected from DApp".to_string(),
        };

        Ok(Response::new(response))
    }

    /// Get active DApp sessions
    #[instrument(skip(self, request))]
    pub async fn get_active_sessions(&self, request: Request<GetActiveSessionsRequest>) -> Result<Response<GetActiveSessionsResponse>, Status> {
        let auth_guard = AuthGuard::new(self.auth_service.clone());
        let auth_context = auth_guard.check_auth(&request).await?;

        let sessions = self.session_manager.get_user_sessions(&auth_context.user_id).await
            .map_err(|e| Status::internal(format!("Failed to get sessions: {}", e)))?;

        let session_info: Vec<DAppSessionInfo> = sessions.into_iter()
            .map(|session| DAppSessionInfo {
                session_id: session.session_id,
                dapp_name: session.dapp_name,
                dapp_url: session.dapp_url,
                chain_id: session.chain_id,
                connected_accounts: session.connected_accounts,
                permissions: session.permissions.iter().map(|p| format!("{:?}", p)).collect(),
                created_at: Some(prost_types::Timestamp {
                    seconds: session.created_at.timestamp(),
                    nanos: session.created_at.timestamp_subsec_nanos() as i32,
                }),
                last_activity: Some(prost_types::Timestamp {
                    seconds: session.last_activity.timestamp(),
                    nanos: session.last_activity.timestamp_subsec_nanos() as i32,
                }),
                status: format!("{:?}", session.status),
                transaction_count: session.transaction_count,
                gas_used: session.gas_used.to_string(),
            })
            .collect();

        let response = GetActiveSessionsResponse {
            sessions: session_info,
            total_count: sessions.len() as u32,
        };

        Ok(Response::new(response))
    }

    /// Parse permission string to enum
    fn parse_permission(&self, permission: &str) -> Option<DAppPermission> {
        match permission.to_lowercase().as_str() {
            "read_accounts" => Some(DAppPermission::ReadAccounts),
            "sign_transactions" => Some(DAppPermission::SignTransactions),
            "sign_messages" => Some(DAppPermission::SignMessages),
            "access_balance" => Some(DAppPermission::AccessBalance),
            "access_tokens" => Some(DAppPermission::AccessTokens),
            "access_nfts" => Some(DAppPermission::AccessNFTs),
            "access_history" => Some(DAppPermission::AccessHistory),
            _ => None,
        }
    }
}

impl DAppSessionManager {
    fn new() -> Self {
        Self {
            active_sessions: tokio::sync::RwLock::new(HashMap::new()),
            config: DAppSessionConfig::default(),
        }
    }

    async fn create_session(&self, session: DAppSession) -> Result<(), ServiceError> {
        let mut sessions = self.active_sessions.write().await;
        sessions.insert(session.session_id.clone(), session);
        Ok(())
    }

    async fn get_session(&self, session_id: &str) -> Result<DAppSession, ServiceError> {
        let sessions = self.active_sessions.read().await;
        sessions.get(session_id)
            .cloned()
            .ok_or_else(|| ServiceError::NotFound("Session not found".to_string()))
    }

    async fn terminate_session(&self, session_id: &str) -> Result<(), ServiceError> {
        let mut sessions = self.active_sessions.write().await;
        sessions.remove(session_id);
        Ok(())
    }

    async fn get_user_sessions(&self, user_id: &str) -> Result<Vec<DAppSession>, ServiceError> {
        let sessions = self.active_sessions.read().await;
        let user_sessions: Vec<DAppSession> = sessions.values()
            .filter(|session| session.user_id == user_id)
            .cloned()
            .collect();
        Ok(user_sessions)
    }
}

impl DAppWhitelistManager {
    fn new() -> Self {
        Self {
            whitelisted_dapps: tokio::sync::RwLock::new(HashMap::new()),
            security_rules: Vec::new(),
        }
    }

    async fn check_whitelist(&self, dapp_url: &str) -> WhitelistStatus {
        let dapps = self.whitelisted_dapps.read().await;
        
        for dapp in dapps.values() {
            if dapp_url.contains(&dapp.url) {
                return WhitelistStatus {
                    status: "whitelisted".to_string(),
                    risk_level: format!("{:?}", dapp.risk_level),
                    security_score: dapp.security_score,
                };
            }
        }

        WhitelistStatus {
            status: "unknown".to_string(),
            risk_level: "Medium".to_string(),
            security_score: 0.5,
        }
    }
}

impl DAppSecurityValidator {
    fn new() -> Self {
        Self {
            malware_detector: Arc::new(MalwareDetector::new()),
            phishing_detector: Arc::new(PhishingDetector::new()),
            contract_analyzer: Arc::new(ContractAnalyzer::new()),
        }
    }

    async fn validate_dapp_url(&self, url: &str) -> Result<ValidationResult, ServiceError> {
        // Malware detection
        let malware_result = self.malware_detector.scan_url(url).await;
        
        // Phishing detection
        let phishing_result = self.phishing_detector.check_url(url).await;
        
        let is_safe = !malware_result.is_malicious && !phishing_result.is_phishing;
        let mut warnings = Vec::new();
        
        if malware_result.is_malicious {
            warnings.push("Potential malware detected".to_string());
        }
        
        if phishing_result.is_phishing {
            warnings.push("Potential phishing site detected".to_string());
        }

        Ok(ValidationResult {
            is_safe,
            reason: if is_safe { "Safe".to_string() } else { "Security risk detected".to_string() },
            warnings,
        })
    }
}

impl MultiChainManager {
    fn new() -> Self {
        let mut supported_chains = HashMap::new();
        
        // Add Ethereum mainnet
        supported_chains.insert("1".to_string(), ChainConfig {
            chain_id: "1".to_string(),
            name: "Ethereum Mainnet".to_string(),
            network_type: NetworkType::Mainnet,
            rpc_urls: vec!["https://mainnet.infura.io/v3/".to_string()],
            explorer_url: "https://etherscan.io".to_string(),
            native_currency: CurrencyInfo {
                symbol: "ETH".to_string(),
                name: "Ether".to_string(),
                decimals: 18,
            },
            gas_price_oracle: Some("https://api.etherscan.io/api".to_string()),
            supports_eip1559: true,
        });

        // Add Polygon
        supported_chains.insert("137".to_string(), ChainConfig {
            chain_id: "137".to_string(),
            name: "Polygon Mainnet".to_string(),
            network_type: NetworkType::Layer2,
            rpc_urls: vec!["https://polygon-rpc.com".to_string()],
            explorer_url: "https://polygonscan.com".to_string(),
            native_currency: CurrencyInfo {
                symbol: "MATIC".to_string(),
                name: "Polygon".to_string(),
                decimals: 18,
            },
            gas_price_oracle: Some("https://api.polygonscan.com/api".to_string()),
            supports_eip1559: true,
        });

        Self {
            supported_chains,
            rpc_providers: HashMap::new(),
            gas_estimators: HashMap::new(),
        }
    }

    async fn get_chain_info(&self, chain_id: &str) -> Option<ChainInfo> {
        self.supported_chains.get(chain_id).map(|config| ChainInfo {
            chain_id: config.chain_id.clone(),
            name: config.name.clone(),
            network_type: format!("{:?}", config.network_type),
            explorer_url: config.explorer_url.clone(),
            native_currency: Some(NativeCurrency {
                symbol: config.native_currency.symbol.clone(),
                name: config.native_currency.name.clone(),
                decimals: config.native_currency.decimals as u32,
            }),
            supports_eip1559: config.supports_eip1559,
        })
    }
}

// Placeholder implementations for security components
impl MalwareDetector {
    fn new() -> Self {
        Self {
            signatures: Vec::new(),
            heuristics: Vec::new(),
        }
    }

    async fn scan_url(&self, _url: &str) -> MalwareResult {
        MalwareResult {
            is_malicious: false,
            confidence: 0.95,
            signatures_matched: Vec::new(),
        }
    }
}

impl PhishingDetector {
    fn new() -> Self {
        Self {
            known_phishing_domains: Vec::new(),
            similarity_threshold: 0.8,
            legitimate_domains: Vec::new(),
        }
    }

    async fn check_url(&self, _url: &str) -> PhishingResult {
        PhishingResult {
            is_phishing: false,
            confidence: 0.95,
            similar_domains: Vec::new(),
        }
    }
}

impl ContractAnalyzer {
    fn new() -> Self {
        Self {
            known_malicious_contracts: Vec::new(),
            analysis_rules: Vec::new(),
        }
    }
}

// Helper structs for responses
#[derive(Debug, Clone)]
pub struct ValidationResult {
    pub is_safe: bool,
    pub reason: String,
    pub warnings: Vec<String>,
}

#[derive(Debug, Clone)]
pub struct WhitelistStatus {
    pub status: String,
    pub risk_level: String,
    pub security_score: f64,
}

#[derive(Debug, Clone)]
pub struct MalwareResult {
    pub is_malicious: bool,
    pub confidence: f64,
    pub signatures_matched: Vec<String>,
}

#[derive(Debug, Clone)]
pub struct PhishingResult {
    pub is_phishing: bool,
    pub confidence: f64,
    pub similar_domains: Vec<String>,
}

impl Default for DAppSessionConfig {
    fn default() -> Self {
        Self {
            max_sessions_per_user: 10,
            session_timeout_minutes: 60,
            max_concurrent_transactions: 5,
            auto_disconnect_inactive_minutes: 30,
            require_user_confirmation: true,
            enable_transaction_simulation: true,
        }
    }
}
